# gameradar

./: Dockerfile  README.md  pyproject.toml
src/gameradar/: api.py  train.py
